# pssh

./: .sh  CMakeCache.txt  CMakeLists.txt  Makefile  README.md  a.txt  cmake_install.cmake  data.txt  main.c  prevgetline.c  prevgetline.h
_test/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  getline  test  test1  test1.c  test2  test2.c  test3  test3.c  test4  test4.c  test5  test5.c  testgetline.c  testread.c
builtincmd/: cd.c  cd.h  echo.c  echo.h  exit.c  exit.h  export.c  export.h  kill.c  kill.h  pwd.c  pwd.h
filecmd/: cat.c  cp.c  ln.c  ls.c  mkdir.c  more.c  mv.c  rm.c  touch.c  xargs.c
src/: defines.c  defines.h  getline.c  getline.h  io.c  io.h
